格式化代碼